build!: change fundamental file structure to match GNU stow

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # .gitignore
 
 # /nvim
-*.json
-nvim/ltex/ltex.hiddenFalsePositives.en-US.txt
+nvim/*.json
+nvim/.config/nvim/ltex/ltex.hiddenFalsePositives.en-US.txt
