--- a/yazi/.config/yazi/package.toml
+++ b/yazi/.config/yazi/package.toml
@@ -1,14 +1,7 @@
-[[plugin.deps]]
-use  = "Lil-Dank/lazygit"
-rev  = "9f924e3"
-hash = "2b0c33928986f126d5c5a4cac31a6b46"
+[plugin]
+deps = []
 
 [[flavor.deps]]
-use  = "BennyOe/tokyo-night"
-rev  = "695dac6"
-hash = "a8f426ea0d9cb843b081d62ab01364c8"
-
-[[flavor.deps]]
-use  = "yazi-rs/flavors:catppuccin-macchiato"
-rev  = "68326b4"
-hash = "3ec21bcfd2735cfcbab61faaf43e59e4"
+use = "yazi-rs/flavors:catppuccin-macchiato"
+rev = "9cd2ac4"
+hash = "bc3478e46ebfc411d611e1ccaf04d26a"
